[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "trtools"
version = "6.1.0"
authors = [
    {name = "Melissa Gymrek", email = "mgymrek@ucsd.edu"},
    {name = "Gymrek Lab"},
]
description = "Toolkit for genome-wide analysis of STRs"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.7.1"
dependencies = [
    "importlib-metadata>=3.0.0 ; python_version < '3.8'",
    "cyvcf2>=0.30.27",
    "matplotlib>=3.1.2 ; python_version <= '3.8'",
    "matplotlib>=3.3.3 ; python_version > '3.8'",
    "numpy>=1.17.3 ; python_version <= '3.8'",
    "numpy>=1.21.6 ; python_version > '3.8'",
    "pandas>=1.2.0",
    "pysam>=0.15.4 ; python_version <= '3.8'",
    "pysam>=0.18.0 ; python_version > '3.8'",
    "scikit-learn>=0.23.1 ; python_version <= '3.8'",
    "scikit-learn>=0.24.0 ; python_version > '3.8'",
    "scipy>=1.3.3 ; python_version <= '3.8'",
    "scipy>=1.13.1 ; python_version > '3.8'",
    "statsmodels>=0.10.2 ; python_version <= '3.8'",
    "statsmodels>=0.13.0 ; python_version > '3.8'",
    "pyfaidx>=0.5.6",
    "pgenlib>=0.90.1",
]

[project.urls]
repository = "https://github.com/gymrek-lab/trtools"
homepage = "https://trtools.readthedocs.org"
documentation = "https://trtools.readthedocs.org"
changelog = "https://github.com/gymrek-lab/TRTools/blob/master/CHANGELOG.md"

[project.scripts]
dumpSTR = "trtools.dumpSTR:run"
mergeSTR = "trtools.mergeSTR:run"
statSTR = "trtools.statSTR:run"
compareSTR = "trtools.compareSTR:run"
qcSTR = "trtools.qcSTR:run"
associaTR = "trtools.associaTR:run"
prancSTR = "trtools.prancSTR:run"
simTR = "trtools.simTR:run"
annotaTR = "trtools.annotaTR:run"

[tool.poetry]
requires-poetry = ">=2.0"
exclude = [
    "trtools/testsupport/*",
    "doc",
    "example-files",
    "trtools/*/*.rst",
    "trtools/*/Example_Files",
    "trtools/dumpSTR/filter_files",
    "trtools/qcSTR/images",
]

[tool.poetry.group.tests.dependencies]
pytest = ">=6.2.0"
pytest-cov = ">=3.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=3.0.4"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autodoc-typehints = ">=1.12.0"

[tool.poetry.scripts]
"test_trtools.sh" = {reference = "trtools/testsupport/test_trtools.sh", type = "file"}
"trtools_prep_beagle_vcf.sh" = {reference = "scripts/trtools_prep_beagle_vcf.sh", type = "file"}

[tool.poetry.requires-plugins]
poetry-conda = ">=0.1.4"
poetry-plugin-export = ">=1.9"
poetry-plugin-shell = ">=1.0.1"

[tool.pytest.ini_options]
addopts = """
--ignore noxfile.py --ignore trtools/testsupport/
-p trtools.testsupport.dataloader
--doctest-modules
"""

[tool.coverage.run]
omit = [
    ".nox/*",
    "noxfile.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

[tool.pylint.BASIC]
function-naming-style = "PascalCase"
method-naming-style = "PascalCase"

[tool.pylint.'MESSAGES CONTROL']
disable = "invalid-name" # not interested in module naming conventions
